# futures-await

./: Cargo.toml
examples/: echo.rs  hyper.rs
futures-async-macro/src/: lib.rs
futures-await-async-macro/: Cargo.toml
futures-await-async-macro/src/: lib.rs
futures-await-await-macro/: Cargo.toml
futures-await-await-macro/src/: lib.rs
futures-await-macro/src/: lib.rs
old-examples/: echo.rs
src/: lib.rs
src/__rt/: future.rs  maybe_box.rs  mod.rs  pinned_future.rs  pinned_stream.rs  stream.rs
testcrate/ui/: bad-return-type.rs  bad-return-type.stderr  borrowed-argument.rs  forget-ok.rs  forget-ok.stderr  generic-not-static.rs  move-captured-variable.stderr  not-a-result.rs  not-a-result.stderr  type_error.rs  unresolved-type.rs  unresolved-type.stderr
tests/: elisions.rs  pinned.rs  smoke.rs
